# dummiescode

mac_code/: CMakeLists.txt  main.cpp
testing/: .gitignore  CMakeLists.txt  main.cpp
testing/OpenXLSX/headers/: XLCellReference.hpp  XLColor.hpp
